added content on master branch

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>gh-pages branch is displayed on Github Pages.</h1>
+    <p>this change was added in master branch.</p>
 </body>
 </html>
